# parallel-sorting-by-regular-sampling

./: CMakeLists.txt  README.md
hybrid_version/: psrs_hybrid.cpp
mpi+hybrid/: multimerge.cpp  multimerge.h  psrs_hybrid.cpp  psrs_mpi.cpp  utilities.cpp  utilities.h
omp/: data.txt  psrs_omp.c  psrs_omp.h  test.c
